[project]
name = "nonebot-plugin-multincm"
dynamic = ["version"]
description = "NCM Song Searcher"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.3",
    "nonebot-plugin-htmlrender>=0.6.6",
    "nonebot-plugin-alconna>=0.59.4",
    "nonebot-plugin-localstore>=0.7.4",
    "pyncm>=1.7.1",
    "typing-extensions>=4.14.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "cookit[jinja,loguru,nonebot-alconna,nonebot-localstore,pydantic]>=0.13.0",
    "nonebot-plugin-waiter>=0.8.1",
    "cachetools>=6.1.0",
    "yarl>=1.20.1",
    "silk-python>=0.2.7",
    "qrcode>=8.2",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-multincm"

[dependency-groups]
dev = ["nonebot-adapter-kritor>=0.3.2", "nonebot-adapter-onebot>=2.4.6"]

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_multincm/__init__.py"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
